Aligned all components correctly and used correct colors

--- a/public/CSS/keyboard.css
+++ b/public/CSS/keyboard.css
@@ -1,17 +1,18 @@
 /*Overall screen*/
 .grid-container_exercise{
     display: grid;
-    grid-template-rows: 0.5fr 1fr 8.5fr;
+    /*grid-template-rows: 0.5fr 1fr 8.5fr;*/
     margin: 50px;
-    height: 100%;
+    /*height: 100%;*/
 }
 /*breadcrumb*/
 .breadcrumb{
-    grid-row: 1/span 1;
+    /*grid-row: 1/span 1;*/
 }
+
 /*Title and stop button*/
 .container{
-    grid-row: 2/span 1;
+    /*grid-row: 2/span 1;*/
 }
 .title{
     display: flex;
@@ -22,33 +23,36 @@
 #stopButton{
     align-self: flex-end;
 }
-/*Image, textbox and keyboard GRID container*/
-.container_visuals{
-    grid-row: 3/span 1;
-}
-/*Image, textbox and keyboard FLEX container*/
-.visuals{
-    display: flex;
-    align-items: center;
 
-    flex-direction: column-reverse;
+/*Image, textbox and keyboard GRID container*/
+.exercise{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-#imageContainer{
-    place-self: center;
-    height: 250px;
-}
+/*.container_visuals{*/
+/*    grid-row: 3/span 1;*/
+/*}*/
+/*!*Image, textbox and keyboard FLEX container*!*/
+/*.visuals{*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    flex-direction: column-reverse;*/
+/*}*/
+/*#imageContainer{*/
+/*    place-self: center;*/
+/*    height: 250px;*/
+/*}*/
 /*Textbox*/
 .textBox {
-    background-color: rgb(243, 243, 243);
-    border: 2px solid black;
+    background-color: var(--beigeNeutral-light);
+    border: 2px solid var(--primary-darkest);
     border-radius: 5px;
     font-size: 40px;
     height: 70px;
     display: flex;
     width: 1200px;
     overflow: hidden;
-
-    align-self: flex-end;
 
     /*display: inline;*/
     /*text-align: center;*/
@@ -89,9 +93,10 @@
     position: absolute;
     top: 75%;
     left: 56%;
+    place-self: center;
 
     transform: translate(-50%, -50%);
-    background-color: rgb(197, 197, 197);
+    background-color: transparent;
     border-radius: 10px;
 
     display: grid;
